--- a/4_hmm/HMM.ipynb
+++ b/4_hmm/HMM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "4281cad9",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "a3ed1c76",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "936cfe2e",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "f1b43f10",
    "metadata": {},
    "outputs": [
@@ -191,8 +191,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "19316b83",
+   "execution_count": 22,
+   "id": "0253f608",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,8 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "25729eef",
+   "execution_count": 23,
+   "id": "41400064",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "08105922",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "59974d86",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "c2cf2383",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "id": "c547537c",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "id": "526cd78e",
    "metadata": {},
    "outputs": [
@@ -511,8 +511,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "01f380da",
+   "execution_count": 14,
+   "id": "933f99da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,8 +521,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "f525c665",
+   "execution_count": 15,
+   "id": "0fb23d7b",
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "id": "61382b89",
    "metadata": {},
    "outputs": [
@@ -684,6 +684,8 @@
     "obs = np.array([1,1,2,1,0,1,2,1,0,2,2,0,1,0,1])\n",
     "\n",
     "inv_obs_map = dict((v,k) for k, v in obs_map.items())\n",
+    "#inv_obs_map = {v:k for k, v in obs_map.items()}\n",
+    "\n",
     "obs_seq = [inv_obs_map[v] for v in list(obs)]\n",
     "\n",
     "print( pd.DataFrame(np.column_stack([obs, obs_seq]), \n",
@@ -692,7 +694,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
+   "id": "a65a7a99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(b)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ffaf4f11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(obs)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "ac653de3",
    "metadata": {},
    "outputs": [
@@ -830,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "8c6118f5",
    "metadata": {},
    "outputs": [
@@ -872,7 +916,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>pooping</td>\n",
+       "      <td>running</td>\n",
        "      <td>healthy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -892,7 +936,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>pooping</td>\n",
+       "      <td>running</td>\n",
        "      <td>healthy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -907,12 +951,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>pooping</td>\n",
+       "      <td>running</td>\n",
        "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>pooping</td>\n",
+       "      <td>running</td>\n",
        "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -943,22 +987,22 @@
        "   Observation Best_Path\n",
        "0       eating   healthy\n",
        "1       eating   healthy\n",
-       "2      pooping   healthy\n",
+       "2      running   healthy\n",
        "3       eating   healthy\n",
        "4     sleeping   healthy\n",
        "5       eating   healthy\n",
-       "6      pooping   healthy\n",
+       "6      running   healthy\n",
        "7       eating   healthy\n",
        "8     sleeping      sick\n",
-       "9      pooping      sick\n",
-       "10     pooping      sick\n",
+       "9      running      sick\n",
+       "10     running      sick\n",
        "11    sleeping      sick\n",
        "12      eating   healthy\n",
        "13    sleeping   healthy\n",
        "14      eating   healthy"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
